--- a/app/assets/stylesheets/pages/_reference.scss
+++ b/app/assets/stylesheets/pages/_reference.scss
@@ -1097,3 +1097,43 @@ body.dark-mode {
   border-radius: 8px;
   width: fit-content;
 }
+
+// ALERT MAINTENANCE
+
+.refonte-alert {
+  position: sticky;
+  top: 0;
+  background-color: #ffffffff;
+  color: #202020;
+  padding: 12px 20px;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 500;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  scroll-snap-align: start;
+}
+.refonte-alert-content {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  flex-grow: 1;
+  text-align: left;
+}
+.refonte-alert-close {
+  background: none;
+  border: none;
+  font-size: 24px;
+  font-weight: bold;
+  color: #202020;
+  cursor: pointer;
+  padding: 0 4px;
+  line-height: 1;
+  opacity: 0.4;
+  flex-shrink: 0;
+}
+.refonte-alert-close:hover {
+  opacity: 1;
+}
